# Shardnet

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/shard-cli/: Cargo.toml
crates/shard-cli/examples/: test_mcp.rs
crates/shard-cli/src/: lib.rs  main.rs  mcp.rs
crates/shard-cli/src/tools/: list.rs  query.rs
crates/shard-cli/tests/: shard_tests.rs
crates/shard-types/: Cargo.toml
crates/shard-types/src/: lib.rs  shard.rs
crates/shard-types/tests/: shard_tests.rs
docs/: feature.txt  plan.txt  think.txt
