[workspace]
members = ["crates/shard-types", "crates/shard-cli"]
# shard-server đã tách ra repo riêng: https://github.com/kurom1ii/shard-server
# Clone về thư mục gốc nếu muốn build full: git clone https://github.com/kurom1ii/shard-server.git shard-server
# Sau đó thêm "shard-server" vào members bên trên
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
sha2 = "0.10"
hex = "0.4"
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tokio-tungstenite = "0.26"
